--- a/Pokedex.html
+++ b/Pokedex.html
@@ -15,15 +15,9 @@
 </head>
 
 <body>
-    <h2>PokeDex By Karol</h2>
-    <div class="container">
-            <div id="poke_container">
-
-            </div>
+    <h1>PokeDex By Karol</h1>
+    <div id="poke_container" class="poke-container">
     </div>
-
-
-
     <script src="app.js"></script>
 
 </body>
